--- a/src/sections/front_section/FrontSection.css
+++ b/src/sections/front_section/FrontSection.css
@@ -97,5 +97,6 @@
     padding: 0.5rem 2.5rem;
     margin: 10px 0;
     color: #1d2633;
+    z-index: 2;
   }
 }
